--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ PORT=5000
 JWT_SECRET=DD8p4SkQLUtXkXmCjZwFN+AWTjKtlKVOR/1FwO0aF5s=
 
 NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=dl6zrb2q5
+CLOUDINARY_API_KEY=772818633914268
+CLOUDINARY_API_SECRET=7TKQLXHNOv6LmullHiRGyPP2kXg
